college prj/force-app/main/default/objects/Mark__c/Mark__c.object-meta.xml
<CustomObject>
    <label>Mark</label>
    <nameField>
        <label>Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>