college prj/force-app/main/default/objects/Mark__c/fields/ADS_marks__c.field-meta.xml
<CustomField>
    <fullName>ADS_marks__c</fullName>
    <label>ADS marks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>