college prj/force-app/main/default/objects/Mark__c/fields/AI__c.field-meta.xml
<CustomField>
    <fullName>AI__c</fullName>
    <label>AI marks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>