college prj/force-app/main/default/objects/Mark__c/fields/AP_marks__c.field-meta.xml
<CustomField>
    <fullName>AP_marks__c</fullName>
    <label>AP marks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>