college prj/force-app/main/default/objects/Mark__c/fields/CD_marks__c.field-meta.xml
<CustomField>
    <fullName>CD_marks__c</fullName>
    <label>CD marks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>