college prj/force-app/main/default/objects/Mark__c/fields/chemistry_marks__c.field-meta.xml
<CustomField>
    <fullName>chemistry_marks__c</fullName>
    <label>chemistry marks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>