college prj/force-app/main/default/objects/Mark__c/fields/DS_lab_marks__c.field-meta.xml
<CustomField>
    <fullName>DS_lab_marks__c</fullName>
    <label>DS lab marks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>