college prj/force-app/main/default/objects/Mark__c/fields/DWDM_marks__c.field-meta.xml
<CustomField>
    <fullName>DWDM_marks__c</fullName>
    <label>DWDM marks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>