college prj/force-app/main/default/objects/Mark__c/fields/FE_marks__c.field-meta.xml
<CustomField>
    <fullName>FE_marks__c</fullName>
    <label>FE marks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>