college prj/force-app/main/default/objects/Mark__c/fields/FLAT_marks__c.field-meta.xml
<CustomField>
    <fullName>FLAT_marks__c</fullName>
    <label>FLAT marks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>