college prj/force-app/main/default/objects/Mark__c/fields/Grade__c.field-meta.xml
<CustomField>
    <fullName>Grade__c</fullName>
    <formula>if( sub_1__c &gt;=35 &amp;&amp;  sub2__c &gt;=35 &amp;&amp;  sub3__c &gt;=35 &amp;&amp; sub4__c &gt;=35 &amp;&amp; sub5__c &gt;=35,&apos;Pass&apos;,&apos;Fail&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Result</label>
    <type>Text</type>
</CustomField>