college prj/force-app/main/default/objects/Mark__c/fields/Gradee__c.field-meta.xml
<CustomField>
    <fullName>Gradee__c</fullName>
    <formula>if( Grade__c =&apos;Fail&apos;,&quot;F&quot;,if( Overall_Percentange__c &gt;=75 &amp;&amp; Overall_Percentange__c &lt;=100, &quot;A&quot;,
if(Overall_Percentange__c &gt;=65 &amp;&amp; Overall_Percentange__c &lt;=74, &quot;B&quot;,
if(Overall_Percentange__c &gt;=60 &amp;&amp; Overall_Percentange__c &lt;=64, &quot;C&quot;,
if(Overall_Percentange__c &gt;=50 &amp;&amp; Overall_Percentange__c &lt;=59, &quot;D&quot;,&quot;F&quot;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gradee</label>
    <type>Text</type>
</CustomField>