college prj/force-app/main/default/objects/Mark__c/fields/OS_marks__c.field-meta.xml
<CustomField>
    <fullName>OS_marks__c</fullName>
    <label>OS marks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>