college prj/force-app/main/default/objects/Mark__c/fields/Overall_Percentange__c.field-meta.xml
<CustomField>
    <fullName>Overall_Percentange__c</fullName>
    <formula>( sub_1__c + sub2__c + sub3__c + sub4__c + sub5__c )/500</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overall Percentange</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>