college prj/force-app/main/default/objects/Mark__c/fields/Pscp_marks__c.field-meta.xml
<CustomField>
    <fullName>Pscp_marks__c</fullName>
    <label>Pscp marks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>