college prj/force-app/main/default/objects/Mark__c/fields/Select_SEM__c.field-meta.xml
<CustomField>
    <fullName>Select_SEM__c</fullName>
    <label>Select SEM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SEM1</fullName>
            </value>
            <value>
                <fullName>SEM2</fullName>
            </value>
            <value>
                <fullName>SEM3</fullName>
            </value>
            <value>
                <fullName>SEM4</fullName>
            </value>
            <value>
                <fullName>SEM5</fullName>
            </value>
            <value>
                <fullName>SEM6</fullName>
            </value>
            <value>
                <fullName>SEM7</fullName>
            </value>
            <value>
                <fullName>SEM8</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>