college prj/force-app/main/default/objects/Mark__c/fields/sub2__c.field-meta.xml
<CustomField>
    <fullName>sub2__c</fullName>
    <label>sub2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>