college prj/force-app/main/default/objects/Mark__c/fields/sub3__c.field-meta.xml
<CustomField>
    <fullName>sub3__c</fullName>
    <label>sub3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>