college prj/force-app/main/default/objects/Mark__c/fields/sub4__c.field-meta.xml
<CustomField>
    <fullName>sub4__c</fullName>
    <label>sub4</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>