college prj/force-app/main/default/objects/Mark__c/fields/sub_1__c.field-meta.xml
<CustomField>
    <fullName>sub_1__c</fullName>
    <label>sub 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>