college prj/force-app/main/default/objects/Mark__c/fields/subject_Failed__c.field-meta.xml
<CustomField>
    <fullName>subject_Failed__c</fullName>
    <formula>if( sub_1__c &gt;=35,0,1)+if( sub2__c &gt;=35,0,1)+if( sub3__c &gt;=35,0,1)+if( sub4__c &gt;=35,0,1)+if( sub5__c &gt;=35,0,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>subject Failed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>