college prj/force-app/main/default/objects/Mark__c/validationRules/marks.validationRule-meta.xml
<ValidationRule>
    <fullName>marks</fullName>
    <active>true</active>
    <errorConditionFormula>sub_1__c &gt;100 || sub2__c&gt;100 ||sub3__c&gt;100 ||sub4__c&gt;100 ||sub5__c&gt;100</errorConditionFormula>
    <errorMessage>Mark Should be Less than 100</errorMessage>
</ValidationRule>