college prj/force-app/main/default/objects/Mark__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Select_SEM__c</columns>
    <columns>Overall_Percentange__c</columns>
    <columns>Grade__c</columns>
    <columns>subject_Failed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>